changed the dependency graph

--- a/exercises/exercises.tex
+++ b/exercises/exercises.tex
@@ -254,9 +254,11 @@ git commit -m "modularised RHS, CFL, IO and Solver"
 \item Write a Makefile for the Fortran code produced on day one in the same directory as the source
   code (\texttt{src/}) using the dependency graph in Figure~\ref{make_depend:eps}
 \begin{figure}[H]
+\begin{center}
 \includegraphics[height=6cm]{make_depend.png}
 \caption{Dependency graph for Makefile}
 \label{make_depend:eps}
+\end{center}
 \end{figure}
 You can use the command:
 \begin{verbatim}
